# bht-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
src/bht_mcp/: __init__.py  __main__.py  cache.py  fetcher.py  models.py  parser.py  server.py
src/bht_mcp/tools/: annotations.py  detail.py  search.py  syntax.py
