[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bht-mcp"
version = "0.1.2"
description = "MCP server for the BHt (Biblia Hebraica transcripta) Hebrew Bible database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Kyuhyun Han" },
]
keywords = ["mcp", "hebrew", "bible", "linguistics", "bht"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
bht-mcp = "bht_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bht_mcp"]
